tests/baselines/reference/interfacedeclWithPredicatesError3.errors.txt
tests/cases/compiler/interfacedeclWithPredicatesError3.ts(6,15): error TS1005: 'identifier as argument for 'type'' expected.


==== tests/cases/compiler/interfacedeclWithPredicatesError3.ts (1 errors) ====
    
    interface UsersShow{
        user_id?: number;
        screen_name?: string;
        text?: string;
    } constrains {
                  
        type(5) == string;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1005: 'identifier as argument for 'type'' expected.
    }